--- a/react/src/styles/common/login.scss
+++ b/react/src/styles/common/login.scss
@@ -1,5 +1,5 @@
 .dp-login-wrapper {
-  background-color: #6495ed;
+  background-color: #0af16d;
   position: absolute;
   top: 0;
   left: 0;
@@ -42,7 +42,7 @@
         padding: 7% 10% 10% 10%;
         & .dp-login-title {
           font-weight: 300;
-          color: #626B7B;
+          color: #0af16d;
           font-size: 16px;
         }
         & .dp-login-conatiner {
