scss change in login

--- a/react/src/styles/common/login.scss
+++ b/react/src/styles/common/login.scss
@@ -80,7 +80,7 @@
           line-height: 44px;
           border-radius: 24.5px;
           outline: none;
-          background: linear-gradient(315.16deg, #6495ed 0%, #6495ed 100%);
+          background: linear-gradient(315.16deg, #067f23 0%, #0af16d 100%);
           font-size: 16px;
         }
       }
